--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,23 @@
 .squareContainer {
     display: flex;
     flex-direction: row;
+    gap: 1px;
 }
 
 .gridContainer {
     display: flex;
     flex-direction: column;
+    border-color: black;
+    border-radius: 1px;
+    border-style: solid;
+    width: 960px;
+    height: 960px;
+    gap: 1px;
+    
 }
 
 .square {
     width: 20px;
     height: 20px;
-    background-color: black;
-    border-color: white;
-    border-width: 1px;
-    border-style: solid;
+    background-color: white;
 }
